--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
 <!-- <app-otp-vrrification></app-otp-vrrification> -->
 <!-- <app-productlist></app-productlist>  -->
 <app-template-driven-form></app-template-driven-form>
-
+<h2>Welcome to Git trial</h2>
 <!-- <h1>Welcome to Angular</h1>
  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere pariatur accusamus harum molestias cum quasi qui illo iusto, perspiciatis optio labore doloribus sapiente iste voluptas amet numquam a, officia dignissimos.</p>
  <h3>my new angular pages</h3>  -->
