new message added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,4 +15,6 @@
 <!-- <h1>Welcome to Angular</h1>
  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere pariatur accusamus harum molestias cum quasi qui illo iusto, perspiciatis optio labore doloribus sapiente iste voluptas amet numquam a, officia dignissimos.</p>
  <h3>my new angular pages</h3>  -->
+
+ <h2>{{message}}</h2>
  
