--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 
 <!-- <app-data-binding></app-data-binding> -->
+<app-event-binding></app-event-binding>
 <!-- <app-calculator></app-calculator>   -->
  <!-- <app-directives-practice></app-directives-practice>  -->
  <!-- <app-age-calculator></app-age-calculator>    -->
@@ -10,7 +11,7 @@
 <!-- <app-practice></app-practice> -->
 <!-- <app-otp-vrrification></app-otp-vrrification> -->
 <!-- <app-productlist></app-productlist>  -->
-<app-template-driven-form></app-template-driven-form>
+<!-- <app-template-driven-form></app-template-driven-form> -->
 <h2>Welcome to Git trial</h2>
 <!-- <h1>Welcome to Angular</h1>
  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere pariatur accusamus harum molestias cum quasi qui illo iusto, perspiciatis optio labore doloribus sapiente iste voluptas amet numquam a, officia dignissimos.</p>
